--- a/wp-content/themes/hello-theme-child-master/css/normalize.css
+++ b/wp-content/themes/hello-theme-child-master/css/normalize.css
@@ -92,11 +92,11 @@ a {
 
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
- */
 
 a:focus {
     outline: thin dotted;
 }
+ */
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
@@ -402,14 +402,14 @@ textarea {
  */
 
 *:focus{
-  outline: none;
+  outline: 3px dotted black !important;
 }
 a{
   text-decoration: none;  
 }
 a:hover, a:focus{
   text-decoration: none;  
-  outline: none;
+  /*outline: none;*/
 }
 table {
     border-collapse: collapse;
@@ -1295,17 +1295,15 @@ h1.page-title{
     font-weight: 700;
 }
 .box-presonal table tr td {
-    padding: 30px 12px 0 0;
+    padding: 15px 12px 15px 0;
     text-align: right;
     color: #000;
     font-size: 20px;
     font-weight: 100;
 }
 .box-presonal table tr td a{
-    color: #000;
-}
-.box-presonal table tr td a:hover{
-    color: #ffdc2d;
+    color: #004990;
+    text-decoration: underline;
 }
 .step-next{
   margin:120px 0;
@@ -1674,31 +1672,7 @@ h1.page-title{
     cursor: pointer;
     padding-right: 8px;
 }
-.job-page label:before {
-    content: '';
-    background-image: url(images/check.png);
-    background-position: bottom center;
-    background-repeat: no-repeat;
-    display: inline-block;
-    position: relative;
-    vertical-align: middle;
-    cursor: pointer;
-    width: 33px;
-    height: 33px;
-    right: -20px;
-    top: -2px;
-}
-.job-page input[type="checkbox"]:checked + label:after {
-    content: '';
-    position: absolute;
-    width: 33px;
-    height: 33px;
-    right: -12px;
-    top: -2px;
-    background-image: url(images/check.png);
-    background-position: center -2px;
-    background-repeat: no-repeat;
-}
+
 .pagenavi {
     text-align: center;
     max-width: 660px;
