--- a/wp-content/plugins/NlsHunterApi/public/css/NlsHunterApi-public.css
+++ b/wp-content/plugins/NlsHunterApi/public/css/NlsHunterApi-public.css
@@ -142,6 +142,8 @@ tbody > tr.job-row:hover {
 .checkbox.sr-select > span {
   width: 30px;
   height: 30px;
+  min-width: 30px;
+  min-height: 30px;
   display: inline-block;
   border-radius: 4px;
   vertical-align: middle;
