--- a/wp-content/themes/hello-theme-child-master/css/normalize.css
+++ b/wp-content/themes/hello-theme-child-master/css/normalize.css
@@ -884,6 +884,9 @@ a {
   margin-bottom: 15px;
   position: relative;
 }
+.item-practice a {
+  display: flex;
+}
 .item-practice img {
   display: block;
   width: 100%;
